# agentil-agent

./: .gitignore  AGENTS.md  CLIENT_INTEGRATION.md  PROJECT_STATE.md  README.md  flake.nix  pyproject.toml
src/agentil_agent/: __init__.py  audio.py  bridge.py  config.py  main.py  protocol.py  sandbox.py  server.py  session.py
src/agentil_agent/agent/: __init__.py  base.py  exceptions.py
src/agentil_agent/agent/opencode/: __init__.py  agent.py  connection.py  messages.py  server.py  server_pool.py  session.py  streaming.py
src/agentil_agent/applications/cli_client/: __init__.py  main.py
src/agentil_agent/applications/server/: config.py  main.py  server.py  session.py
src/agentil_agent/client/: text_client.py
src/agentil_agent/core/: __init__.py  audio.py  config.py
src/agentil_agent/core/agent/: __init__.py  base.py  types.py
src/agentil_agent/core/agent/mock/: __init__.py  agent.py
src/agentil_agent/core/agent/opencode/: README.md  __init__.py  agent.py  connection.py  events.py  exceptions.py  messages.py  server.py  streaming.py
src/agentil_agent/core/mcp/: __init__.py  manager.py  nix_installer.py  types.py
src/agentil_agent/core/space/: __init__.py  config.py
src/agentil_agent/core/space/directory/: __init__.py
src/agentil_agent/core/space/nix-jail/: __init__.py
src/agentil_agent/infrastructure/: __init__.py  audio.py  config.py  stt.py  torch_utils.py  tts.py
src/agentil_agent/mcp/: __init__.py  manager.py  nix_installer.py  types.py
src/agentil_agent/space/: __init__.py  base.py  config.py  exceptions.py  manager.py
src/agentil_agent/space/directory/: __init__.py  space.py
