[project]
name = "agentil-agent"
version = "0.3.0"
description = "Voice server for OpenCode - WebSocket API with TTS/STT for AI coding assistant"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Hugo Morau", email = "morauhugo@gmail.com"}
]
keywords = ["agentil", "voice", "tts", "stt", "ai", "assistant", "websocket", "server"]

dependencies = [
    # WebSocket Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    
    # OpenCode communication
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    
    # PyTorch with CUDA 12.8 support (install separately via pip)
    # pip install torch torchaudio --index-url https://download.pytorch.org/whl/nightly/cu128
    # "torch",
    # "torchaudio",
    
    # TTS - MeloTTS
    "melotts",
    "unidic==1.1.0",
    "soxr==0.5.0",
    
    # STT - Whisper
    "openai-whisper>=20240930",
    
    # Audio processing
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pydub>=0.25.0",
    
    # Configuration
    "pydantic>=2.5.0",
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    
    # CLI/UI
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
agentil-agent = "agentil_agent.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentil_agent"]

[tool.uv.sources]
# Use local MeloTTS if available, otherwise fetch from git
# Uncomment ONE of the following:
# melotts = { path = "../depend/MeloTTS" }
melotts = { git = "https://github.com/myshell-ai/MeloTTS.git" }

# PyTorch CUDA 12.8 - install manually via pip:
# pip install torch torchaudio --index-url https://download.pytorch.org/whl/nightly/cu128
# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/nightly/cu128"
# explicit = true

# [tool.uv.sources.torch]
# index = "pytorch-cu128"

# [tool.uv.sources.torchaudio]
# index = "pytorch-cu128"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
